###
# This is a log of major user-visible changes in each MacPorts release.
# $Id$
###


Unreleased:
    - Ruby port group now accepts a new (optional) last parameter for the
      ruby.setup command, "implementation". It is "ruby" by default, and 
      can be set to "ruby19". It names the ruby-implementing port, and can
      possibly support still other rubys in the future. (#15912, febeling 
      in 38683)
	
    - Don't use build.nice for complex build.cmd commands (#16091)

    - The buildmakejobs setting now also affects ports using the scons build
      system, so now scons-based ports can be built in parallel too. Previously
      only automake-based ports were supported. (ryandesign in r38556)

    - User-supplied port names are now treated in a fully case-insensitive
      manner. This fixes a bug where giving the name with incorrect case when
      deactivating/uninstalling would cause all the port's files to be left
      behind. (#11759, jmr/raimue in r37349, 37621)
    
    - The non-verbose output for the build phase no longer shows what target
      was used. This makes the build phase consistent with the other phases
      which also do not show details. If details are desired, the debug or
      verbose switches should be used. (#15881, raimue/ryandesign in r38315)

    - Make missing sed extended regexp (for reinplace -E) into a runtime error.
      (#15577, afb in r37501)

    - More helpful strings for 'port help' (needs more work #15467, raimue)

    - Command line options are checked if the command accepts it before
      running (raimue)

    - We now have a mirror of (almost) all distfiles at distfiles.macports.org,
      and it is automatically appended to master_sites and patch_sites (#15456,
      jmr in r37217, 37255)

    - port search looks now in name, description and long_description for the
      search pattern and prints the list sorted (#15434, raimue in r37119,
      r37121)
